@@ -6,7 +6,7 @@
 ------------------------------------------------------------------------------
 
 
-Interchange 5.5.1 released on YYYY-MM-DD.
+Interchange 5.5.1 released on 2007-08-21.
 
 See UPGRADE document for incompatible changes not listed here.
 
@@ -129,6 +129,8 @@ Core
 
 * Fixed a bug where the [data session host] was not being set on a session's
   first page access.  The "host" key was only being set for subsequent pages.
+
+* Removed MV_DOLLAR_ZERO workaround for a bug fixed 5 years ago.
 
 UserDB
 ------
